--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,21 @@
+/* Header */
 header {
     text-align: center;
-    background-color: #e0e0e0; /* Light gray */
-    color: black; /* Text color */
+    background-color: #e0e0e0; /* Warna abu-abu muda */
+    color: black; /* Warna teks */
     padding: 10px;
 }
 
+/* Body */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #ffffff; /* White background */
-    color: black; /* Text color */
+    background-color: #ffffff; /* Warna latar belakang putih */
+    color: black; /* Warna teks */
 }
 
+/* Kontainer */
 .container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -24,16 +27,18 @@ body {
     border-radius: 10px;
 }
 
+/* Kalkulator dan Hasil */
 .calculator,
 .result {
-    background-color: #f5f5f5; /* Light gray background */
+    background-color: #f5f5f5; /* Warna latar belakang abu-abu muda */
     padding: 20px;
     border-radius: 10px;
-    color: black; /* Text color */
+    color: black; /* Warna teks */
 }
 
 .result {
     text-align: center;
+    font-size: 20px; /* Ukuran teks hasil BMI */
 }
 
 .calculator {
@@ -48,7 +53,7 @@ body {
     margin-top: 0;
 }
 
-/* Form styling */
+/* Gaya formulir */
 .form-group {
     margin-bottom: 15px;
 }
@@ -62,15 +67,15 @@ input[type="number"],
 select {
     width: 100%;
     padding: 10px;
-    border: 1px solid #cccccc; /* Light gray border */
+    border: 1px solid #cccccc; /* Border abu-abu muda */
     border-radius: 5px;
     box-sizing: border-box;
 }
 
 button {
     padding: 10px 20px;
-    background-color: #b3e0ff; /* Greenish blue */
-    color: white; /* White text */
+    background-color: #cccccc; /* Biru hijau */
+    color: white; /* Teks putih */
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -78,16 +83,17 @@ button {
 }
 
 button:hover {
-    background-color: #57bcff; /* Darker greenish blue on hover */
+    background-color: #5e5e5e; /* Biru hijau lebih gelap saat dihover */
 }
 
-/* Media queries for responsiveness */
+/* Media queries untuk responsivitas */
 @media screen and (max-width: 768px) {
     .container {
         grid-template-columns: 2fr;
     }
 }
 
+/* Stil untuk elemen 'strong' dalam hasil */
 .result strong {
     display: block;
     margin-bottom: 5px;
