--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 /* Header */
 header {
     text-align: center;
-    background-color: #e0e0e0; /* Warna abu-abu muda */
-    color: black; /* Warna teks */
+    background-color: #42cda1; /* Warna abu-abu muda */
+    color: rgb(255, 255, 255); /* Warna teks */
     padding: 10px;
+    border-radius: 15px;
 }
-
 /* Body */
 body {
     font-family: Arial, sans-serif;
@@ -28,6 +28,9 @@ body {
 }
 
 /* Kalkulator dan Hasil */
+.result-header {
+    font-size: 80%;
+}
 .calculator,
 .result {
     background-color: #f5f5f5; /* Warna latar belakang abu-abu muda */
@@ -44,15 +47,6 @@ body {
 .calculator {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-
-.result {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.result h2 {
-    margin-top: 0;
-}
-
 /* Gaya formulir */
 .form-group {
     margin-bottom: 15px;
@@ -100,17 +94,18 @@ button:hover {
 }
 
 .result strong:first-of-type {
-    margin-top: 5px;
+    margin-top: 80px;
 }
 /* toggle dark mode lagi proses*/
+.dark-mode header {
+    background-color: #454545; /* Darker background color */
+    color: #ffffff; /* Lighter text color */
+}
 .toggle-container {
     position: absolute;
     top: 20px;
     right: 20px;
     z-index: 1000; /* Ensure it's above other content */
-}
-
-.toggle-container {
     text-align: right;
     padding: 10px;
 }
@@ -120,6 +115,7 @@ button:hover {
     display: inline-block;
     width: 60px;
     height: 34px;
+    background-color: transparent;
 }
 
 .switch input {
@@ -176,9 +172,7 @@ input:checked + .slider:before {
     border-radius: 50%;
 }
 
-.toggle-label {
-    margin-left: 10px;
-}
+
 /* Dark mode styles */
 .dark-mode {
     background-color: #1a1a1a; /* Dark background color */
@@ -208,6 +202,25 @@ input:checked + .slider:before {
     background-color: #999; /* Darker hover color */
 }
 
-.dark-mode .toggle-label {
-    color: white; /* Light text color */
+.toggle-label {
+    display: flex;
+    align-items: center;
 }
+
+/* CSS for the moon and sun icons */
+.moon, .sun {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 24px;
+    color: white; /* Adjust the color as needed */
+}
+.sun {
+    left: -10px;
+}
+
+.moon {
+    right: -10px;
+}
+
+
